Add files for gulp-sass Initial setting
Tutorial Now: Preprocessing with Gulp
https://css-tricks.com/gulp-for-beginners/

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/windy-roa-d/hello-world",
   "devDependencies": {
-    "gulp": "~3.9.1"
+    "gulp": "~3.9.1",
+    "gulp-sass": "~3.0.0"
   }
 }
